--- a/src/responsive_design/package.json
+++ b/src/responsive_design/package.json
@@ -1,5 +1,8 @@
 {
-  "dependencies": {
-    "minify": "5.2.0"
-  }
+	"scripts":{
+		"minify":"minify site/css/main.css > site/css/main.min.css"
+	},
+	"dependencies": {
+		"minify": "5.2.0"
+	}
 }
